--- a/bancocliente/home.html
+++ b/bancocliente/home.html
@@ -33,6 +33,8 @@
         <script src="Resources/JS/General/appBank.js" type="text/javascript"></script>
         <script src="Resources/JS/Banco/ctlBanco.js" type="text/javascript"></script>
         <script src="Resources/JS/Banco/serBanco.js" type="text/javascript"></script>
+        <script src="Resources/JS/Sucursales/ctlSucursales.js" type="text/javascript"></script>
+        <script src="Resources/JS/Sucursales/serSucursales.js" type="text/javascript"></script>
     </head>
     <body class="hold-transition skin-blue sidebar-mini" ng-app="appBank" >
         <div class="wrapper">
