--- a/bancocliente/home.html
+++ b/bancocliente/home.html
@@ -18,6 +18,8 @@
         <!-- Theme style -->
         <link rel="stylesheet" href="Resources/dist/css/AdminLTE.min.css">
         <link rel="stylesheet" href="Resources/dist/css/skins/_all-skins.min.css">
+
+        <link rel="stylesheet" href="Resources/css/Style.css">
         <!-- jQuery 2.2.3 -->
         <script src="Resources/plugins/jQuery/jquery.min.js"></script>
         <!-- Bootstrap 3.3.6 -->
@@ -33,6 +35,8 @@
         <script src="Resources/JS/General/appBank.js" type="text/javascript"></script>
         <script src="Resources/JS/Banco/ctlBanco.js" type="text/javascript"></script>
         <script src="Resources/JS/Banco/serBanco.js" type="text/javascript"></script>
+        <script src="Resources/JS/Socios/ctlSocios.js" type="text/javascript"></script>
+        <script src="Resources/JS/Socios/serSocios.js" type="text/javascript"></script>
         <script src="Resources/JS/Sucursales/ctlSucursales.js" type="text/javascript"></script>
         <script src="Resources/JS/Sucursales/serSucursales.js" type="text/javascript"></script>
     </head>
