--- a/bancocliente/pages/Admin/Banco/crear.html
+++ b/bancocliente/pages/Admin/Banco/crear.html
@@ -26,7 +26,7 @@
             <div class="form-group">
               <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Nit <span class="required">*</span></label>
               <div class="col-md-6 col-sm-6 col-xs-12">
-                <input type="text" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12" ng-model="nit">
+                <input type="number" id="last-name" name="last-name" required="required" class="form-control col-md-7 col-xs-12" ng-model="nit">
               </div>
             </div>
             <div class="form-group">
@@ -48,7 +48,11 @@
                 <input type="button" class="btn btn-primary" ng-click="limpiar();" value="Cancel"/>
                 <input type="submit" class="btn btn-success" value="Registrar">
               </div>
+              <div class="col-md-12 col-sm-6 col-xs-12 col-md-offset-3">
+                <label ng-class='{"classError": colorText=="error", "classSuccess":colorText=="success"}'>{{msj}}</label>
+              </div>
             </div>
+
           </form>
         </div>
         <!-- /.col -->
