--- a/bancocliente/pages/Admin/Socios/crear.html
+++ b/bancocliente/pages/Admin/Socios/crear.html
@@ -9,7 +9,7 @@
     </ol>
 </section>
 
-<section class="content" ng-controller="sociosController">
+<section class="content" ng-controller="sociosController" ng-init="listarDeptos(); calPorcentaje();">
     <h3 style="text-align: center;"><b>Registro socio</b></h3>
     <hr>
     <div class="row">
@@ -33,21 +33,17 @@
                       <input class="form-control" type="number" required placeholder="Teléfono del socio" ng-model="telefono">
                   </div>
                   <div class="form-group" style="margin-right:0%;">
-                      <label for="direccion">Dirección del socio</label>
-                      <div class="row">
-                          <div class="col-md-4" style="padding-right:1.6px;">
-                              <select class="form-control" type="number"   min="0" required ng-model="ciudad">
-                                  <option value="1">La Tebaida</option>
-                                  <option>Armenia</option>
-                                  <option>Quimbaya</option>
-                                  <option>Calarca</option>
-                              </select>
-                          </div>
-                          <div class="col-md-8" style="padding-left:0;">
-                              <input class="form-control" type="text" required placeholder="Direccion del socio" ng-model="direccion">
-                          </div>
-                      </div>
+                    <label for="depto">Departamento</label>
+                    <select ng-model="depto" class="form-control col-md-7 col-xs-12" ng-change="listarMunicipios();">
+                      <option value='0'>Seleccione un departamento</option>
+                      <option ng-repeat=" obj in deptos" value="{{obj.id}}" >{{obj.nombre}}</option>
+                    </select>
                   </div>
+                  <div class="form-group" style="margin-right:0%;">
+                      <label for="direccion">Dirección del socio</label>
+                      <input class="form-control" type="text" required placeholder="Direccion del socio" ng-model="direccion">
+                  </div>
+                  
               </div>
               <div class="col-md-6">
                   <div class="form-group" style="margin-right:0%;">
@@ -63,13 +59,21 @@
                       <input class="form-control" type="email" required placeholder="Correo electrónico del socio" ng-model="correo">
                   </div>
                   <div class="form-group" style="margin-right:0%;">
-                      <label for="porcentaje">Porcentaje de participación</label>
-                      <input class="form-control" type="number" min="0" required placeholder="Porcentaje de participación del socio" ng-model="porcentaje">
+                      <label for="ciudad">Ciudad</label>
+                      <select ng-model="ciudad" class="form-control col-md-7 col-xs-12">
+                        <option value="0">Seleccione una ciudad</option>
+                        <option ng-repeat=" obj in municipios" value="{{obj.id}}" >{{obj.nombre}}</option>
+                      </select>                      
+                  </div>
+                  <div class="form-group" style="margin-right:0%;">
+                      <label for="porcentaje">Porcentaje de participación (disponible {{porDisponible}}%)</label>
+                      <input class="form-control" type="number" min="1" max="{{porDisponible}}" required placeholder="Porcentaje de participación del socio" ng-model="porcentaje">
                   </div>
               </div>
           </div>
           <div class="row">
             <div class="col-md-8">
+              <label ng-class='{"classError": colorText=="error", "classSuccess":colorText=="success"}'>{{msj}}</label>
             </div>
             <div class="col-md-2">
               <input type="button" class="btn btn-primary btn-block btn-flat" ng-click="limpiar();" value="Cancel"/>
