--- a/bancocliente/pages/Admin/Socios/crear.html
+++ b/bancocliente/pages/Admin/Socios/crear.html
@@ -3,9 +3,8 @@
         Sistema bancario StartBank
     </h1>
     <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-university"></i> Banco</a></li>
+        <li><a href="#"><i class="fa fa-users"></i> Socios</a></li>
         <li class="active">Registro</li>
-        <li class="active">Socios</li>
     </ol>
 </section>
 
