CRUD - Ciudades,Departamentos
Se hicieron los cruds tanto de las ciudades como de los departamentos,
registrar,listar,editar y eliminar

--- a/bancocliente/home.html
+++ b/bancocliente/home.html
@@ -39,6 +39,10 @@
         <script src="Resources/JS/Socios/serSocios.js" type="text/javascript"></script>
         <script src="Resources/JS/Sucursales/ctlSucursales.js" type="text/javascript"></script>
         <script src="Resources/JS/Sucursales/serSucursales.js" type="text/javascript"></script>
+         <script src="Resources/JS/Departamentos/ctlDepartamentos.js" type="text/javascript"></script>
+        <script src="Resources/JS/Departamentos/serDepartamentos.js" type="text/javascript"></script>
+        <script src="Resources/JS/Ciudades/ctlCiudades.js" type="text/javascript"></script>
+        <script src="Resources/JS/Ciudades/serCiudades.js" type="text/javascript"></script>
     </head>
     <body class="hold-transition skin-blue sidebar-mini" ng-app="appBank" >
         <div class="wrapper">
