CRUD TIPO_CUENTAS

--- a/bancocliente/home.html
+++ b/bancocliente/home.html
@@ -43,6 +43,8 @@
         <script src="Resources/JS/Departamentos/serDepartamentos.js" type="text/javascript"></script>
         <script src="Resources/JS/Ciudades/ctlCiudades.js" type="text/javascript"></script>
         <script src="Resources/JS/Ciudades/serCiudades.js" type="text/javascript"></script>
+         <script src="Resources/JS/Cuentas/ctlCuentas.js" type="text/javascript"></script>
+        <script src="Resources/JS/Cuentas/serCuentas.js" type="text/javascript"></script>
     </head>
     <body class="hold-transition skin-blue sidebar-mini" ng-app="appBank" >
         <div class="wrapper">
