--- a/bancocliente/pages/Admin/Cuentas/registrar.html
+++ b/bancocliente/pages/Admin/Cuentas/registrar.html
@@ -5,12 +5,12 @@
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-university"></i> Banco</a></li>
         <li class="active">Registro</li>
-        <li class="active">Departamentos</li>
+        <li class="active">Tipos de cuentas</li>
     </ol>
 </section>
 
-<section class="content" ng-controller="departamentoController" >
-    <h3 style="text-align: center;"><b>Registro de departamento</b></h3>
+<section class="content" ng-controller="tipoCuentaController" >
+    <h3 style="text-align: center;"><b>Registro de tipo de cuenta</b></h3>
     <hr>
     <div class="row">
         <div class="col-md-1">
@@ -22,7 +22,7 @@
               <div class="col-md-8">
                   <div class="form-group" style="margin-right:0%;">
                       <label for="nombre">Nombre(s)</label>
-                      <input class="form-control" type="text" required placeholder="Nombre(s) del departamento" ng-model="nombre">
+                      <input class="form-control" type="text" required placeholder="Nombre(s) del tipo de cuenta" ng-model="nombre">
                   </div>
                   
           </div>
