--- a/bancocliente/pages/Admin/Cuentas/listar.html
+++ b/bancocliente/pages/Admin/Cuentas/listar.html
@@ -10,7 +10,7 @@
 </section>
 <div ng-controller="tipoCuentaController" ng-init="listarTipoCuentas();">
 <section class="content">
-    <h3 style="text-align: center;"><b>Listado de Departamentos</b></h3>
+    <h3 style="text-align: center;"><b>Listado de tipo de cuentas</b></h3>
      <label ng-class='{"classError": colorText=="error", "classSuccess":colorText=="success"}'>{{msj}}</label>
     <hr>
     <div class="row">
