--- a/bancocliente/pages/Admin/Socios/listar.html
+++ b/bancocliente/pages/Admin/Socios/listar.html
@@ -149,7 +149,7 @@
                 <input type="button" class="btn btn-primary btn-block btn-flat" data-dismiss="modal" value="Cancel"/>
             </div>
             <div class="col-md-3">
-              <button type="submit" class="btn btn-success btn-block btn-flat" ng-click="editar();">Actualizar</button>
+              <input type="submit" class="btn btn-success btn-block btn-flat" value="Actualizar">
             </div>
           </div>
           </form>
